# bubble_harrier

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: config.toml  cube_120.glslf  cube_150.glslf  cube_150.glslv
src/: components.rs  cubes.rs  game.rs  main.rs  resources.rs  util.rs
src/bundles/: kiss.rs  mod.rs
src/bundles/core/: config.rs  mod.rs
src/bundles/kiss/: camera.rs  draw.rs  exit.rs  input.rs  mod.rs  setup.rs  ui.rs
src/bundles/sim/: acceleration.rs  collide.rs  damage.rs  despawn.rs  health.rs  mod.rs  movement.rs  obstacle_spawn.rs  score.rs  shooting.rs
src/components/: mod.rs  node_builder.rs
src/resources/: config.rs  mod.rs
src/sim/: error.rs  game.rs  mod.rs  player.rs
