[package]
name = "game_jam"
version = "0.1.0"
authors = ["andresattler <andressattler.webdev@gmail.com>", "Paul Martensen <paul.martensen@gmx.de>"]
edition = "2018"

[features]
shred_nightly = ["shred/nightly"]
default = ["shred_nightly"]

[dependencies]
rand = "0.6.0"
nalgebra = "*"
kiss3d = "*"
specs = "0.15.1"
specs_bundler = "0.6.0"
specs_transform = "0.5.0"
specs_time = "0.6.1"
shred = "0.9.3"
ncollide3d = "0.21.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5.5"
